# vita_opros

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile.bot  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml  run_bot.py  run_dashboard.py
bot/: config.py  database.py  healthcheck.py  keyboards.py  logging_config.py  main.py  middleware.py  models.py  utils.py
dashboard/api/: main.py  routes.py  schemas.py
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/public/: index.html
dashboard/frontend/src/: App.css  App.js
dashboard/frontend/src/api/: index.js
dashboard/frontend/src/components/: Sidebar.js  ThemeToggle.js
dashboard/frontend/src/hooks/: useTheme.js
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_client_response_unique.py
tests/: conftest.py  test_admin.py  test_api.py  test_api_auth.py  test_config.py  test_export.py  test_export_extended.py  test_integrity.py  test_middleware.py  test_models.py  test_reminder.py  test_reminder_extended.py  test_survey.py  test_update.py  test_utils.py  test_vacation_model.py
