[project]
name = "vita-opros"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "openpyxl>=3.1,<4",
    "apscheduler>=3.10,<4",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "structlog>=24.1,<25",
    "redis>=5.0,<6",
]

[tool.setuptools.packages.find]
include = ["bot*", "dashboard*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
redis = [
    "redis>=5.0,<6",
]